# nerfplayer-nerfstudio

./: .gitignore  README.md  pyproject.toml
nerfplayer/: nerfplayer_config.py  nerfplayer_nerfacto.py  nerfplayer_nerfacto_field.py  nerfplayer_ngp.py  nerfplayer_ngp_field.py
nerfplayer/cuda/: _backend.py
nerfplayer/cuda/csrc/: temporal_gridencoder.cu
