[project]
name = "nerfplayer"
version = "0.0.1"

dependencies=[
    "nerfstudio>=0.3.1"
]

[tool.setuptools.packages.find]
include = ["nerfplayer*"]

[project.entry-points.'nerfstudio.method_configs']
nerfplayer_nerfacto = 'nerfplayer.nerfplayer_config:nerfplayer_nerfacto'
nerfplayer_ngp = 'nerfplayer.nerfplayer_config:nerfplayer_ngp'