[project]
name = "nerfplayer"
version = "0.0.2"

dependencies=[
    "nerfstudio==1.1.4"
]

[tool.setuptools.packages.find]
include = ["nerfplayer*"]

[project.entry-points.'nerfstudio.method_configs']
nerfplayer_nerfacto = 'nerfplayer.nerfplayer_config:nerfplayer_nerfacto'
nerfplayer_ngp = 'nerfplayer.nerfplayer_config:nerfplayer_ngp'